# llcool-twitch-tools

./: .dockerignore  .gitignore  README.md  Taskfile.yml
api/: .env.example  .gitignore  Cargo.toml  build.sh  run.sh  sqlx-data.json
api/migrations/: 20221016230311_initial_scheme.down.sql  20221016230311_initial_scheme.up.sql  20221019112758_global_commands.down.sql  20221019112758_global_commands.up.sql
api/migrations/2022-08-01-144326_create_users/: up.sql
api/migrations/2022-08-18-214506_bot_credentials/: down.sql  up.sql
api/migrations/2022-09-29-112437_create_command/: down.sql  up.sql
api/migrations/2022-10-13-215703_global_commands/: down.sql  up.sql
api/src/: bot.rs  errors.rs  extractors.rs  lib.rs  main.rs  schema.rs  types.rs
api/src/bot/: bot.rs  channel.rs  manager.rs  mod.rs  types.rs  utils.rs
api/src/enums/: mod.rs  session_key.rs
api/src/errors/: errors.rs  from.rs  mod.rs
api/src/extractors/: mod.rs  twitch_app_token.rs  user_from_cookie.rs
api/src/guards/: mod.rs  twitch_credentials_guard.rs
api/src/middlewares/: mod.rs  twitch_client_credentials.rs
api/src/models/: bot_credentials.rs  bot_info.rs  global_command.rs  mod.rs  user.rs  user_command.rs  user_session.rs  user_session_data.rs  utils.rs
api/src/models/v2/: bot_credentials.rs  mod.rs
api/src/routes/: auth.rs  bot.rs  command.rs  global_command.rs  mod.rs  user_global_command.rs  utils.rs
api/src/states/: app_config.rs  mod.rs  twitch_credentials.rs
api/src/twitch/: api.rs  id_api.rs  mod.rs  types.rs
app/: .env.example  .gitignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
app/src/: api.ts  app.css  app.d.ts  app.html  constants.ts  env.ts  error.ts  formType.ts  global.d.ts  hooks.server.ts  hooks.ts  models.ts  stores.ts
app/src/api/: auth.ts  bot.ts  command.ts  globalCommand.ts  index.ts  utils.ts
app/src/components/: Banner.svelte  BotStatus.svelte  Button.svelte  CommandFormModal.svelte  CommandRow.svelte  ConfirmationModal.svelte  DashboardLayout.svelte  Dropdown.svelte  DropdownItem.svelte  Fieldset.svelte  GlobalCommandFormModal.svelte  Loader.svelte  Message.svelte  ModalFooter.svelte  ModalHeader.svelte  NavMenuItem.svelte  RootModal.svelte  SideMenuItem.svelte  (+1 more)
docker/: api.Dockerfile  app.Dockerfile  cargo.Dockerfile  docker-compose.dev.yml  pnpm.Dockerfile
(+32 files in other folders)
