[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.1"
reqwest = {version = "0.11.11", features = ["json"]}
serde = {version = "1.0.139", features = ["derive"]}
serde_json = "1.0.82"
futures = "0.3.21"
time = {version="0.3.11", features = ["std"]}
rand = "0.8.5"
actix-web = "4.1.0"
futures-util = "0.3.21"
