[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.1"
reqwest = {version = "0.11.11", features = ["json"]}
serde = {version = "1.0.139", features = ["derive"]}
serde_json = "1.0.82"
futures = "0.3.21"
time = {version="0.3.11", features = ["std"]}
rand = "0.8.5"
actix-web = {version = "4.1.0", features = ["openssl"]}
openssl = "0.10.41"
actix-session = {version = "0.7.1", features = ["cookie-session"]}
env_logger = "0.9.0"
log = "0.4.17"
futures-util = "0.3.21"
pct-str = "1.1.0"
diesel = {version = "1.4.8", features = ["sqlite", "r2d2"]}
uuid = {version = "1.1.2", features = ["v4", "fast-rng"]}
derive_more = "0.99.17"
